force-app/main/default/objects/Funding_Application__c/Funding_Application__c.object-meta.xml
<CustomObject>
    <label>Funding Application</label>
    <nameField>
        <displayFormat>FA-{0}</displayFormat>
        <label>Funding Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Application</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>