force-app/main/default/objects/Funding_Application__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Funding Application</relationshipLabel>
    <relationshipName>Funding_Application</relationshipName>
    <type>Lookup</type>
</CustomField>