force-app/main/default/objects/Funding_Application__c/fields/Any_Potential_Conflict_with_SC_Recovery__c.field-meta.xml
<CustomField>
    <fullName>Any_Potential_Conflict_with_SC_Recovery__c</fullName>
    <label>Any Potential Conflict with SC Recovery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>