force-app/main/default/objects/Funding_Application__c/fields/Assign_To_BM__c.field-meta.xml
<CustomField>
    <fullName>Assign_To_BM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assign to Board Member</description>
    <label>Assign to Board Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Funding_Application1</relationshipName>
    <type>Lookup</type>
</CustomField>