force-app/main/default/objects/Funding_Application__c/fields/Assign_to_BT__c.field-meta.xml
<CustomField>
    <fullName>Assign_to_BT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assign to Board Team</description>
    <label>Assgin to Board Team</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Funding_Application2</relationshipName>
    <type>Lookup</type>
</CustomField>