force-app/main/default/objects/Funding_Application__c/fields/CollaboratingWithOtherGPSEntity__c.field-meta.xml
<CustomField>
    <fullName>CollaboratingWithOtherGPSEntity__c</fullName>
    <label>Collaborating with Other GPS Entity?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>