force-app/main/default/objects/Funding_Application__c/fields/DoesEntityApproveLineItems__c.field-meta.xml
<CustomField>
    <fullName>DoesEntityApproveLineItems__c</fullName>
    <inlineHelpText>Help-Text Entity Approval for Line-Item Servability?</inlineHelpText>
    <label>Does Entity Approve Line-Items?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>