force-app/main/default/objects/Funding_Application__c/fields/ElectronicSignature__c.field-meta.xml
<CustomField>
    <fullName>ElectronicSignature__c</fullName>
    <label>Electronic Signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>