force-app/main/default/objects/Funding_Application__c/fields/EntityType__c.field-meta.xml
<CustomField>
    <fullName>EntityType__c</fullName>
    <label>Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Medical Treatment Provider</fullName>
            </value>
            <value>
                <fullName>Mental Health Treatment Provider</fullName>
            </value>
            <value>
                <fullName>Educational Provider</fullName>
            </value>
            <value>
                <fullName>State Agency</fullName>
            </value>
            <value>
                <fullName>County or Political Subdivision</fullName>
            </value>
            <value>
                <fullName>Nonprofit Organization</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>