force-app/main/default/objects/Funding_Application__c/fields/FiscalManagerEmail__c.field-meta.xml
<CustomField>
    <fullName>FiscalManagerEmail__c</fullName>
    <label>Fiscal Manager Email</label>
    <type>Email</type>
</CustomField>