force-app/main/default/objects/Funding_Application__c/fields/FiscalManagerPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>FiscalManagerPhoneNumber__c</fullName>
    <label>Fiscal Manager Phone Number</label>
    <type>Phone</type>
</CustomField>