force-app/main/default/objects/Funding_Application__c/fields/FiscalManagerTitle__c.field-meta.xml
<CustomField>
    <fullName>FiscalManagerTitle__c</fullName>
    <label>Fiscal Manager Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>