force-app/main/default/objects/Funding_Application__c/fields/IdentifyTheBoardMemberAndRelation__c.field-meta.xml
<CustomField>
    <fullName>IdentifyTheBoardMemberAndRelation__c</fullName>
    <label>Identify the Board member and Relation?</label>
    <type>TextArea</type>
</CustomField>