force-app/main/default/objects/Funding_Application__c/fields/IsEntityAnSCBellwetherPlaintiff__c.field-meta.xml
<CustomField>
    <fullName>IsEntityAnSCBellwetherPlaintiff__c</fullName>
    <label>Is Entity an SC Bellwether Plaintiff?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>