force-app/main/default/objects/Funding_Application__c/fields/MinusEstimatedCarryForwardAmount__c.field-meta.xml
<CustomField>
    <fullName>MinusEstimatedCarryForwardAmount__c</fullName>
    <label>Estimated Carry Forward Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>