force-app/main/default/objects/Funding_Application__c/fields/MinusEstimatedInterestEarned__c.field-meta.xml
<CustomField>
    <fullName>MinusEstimatedInterestEarned__c</fullName>
    <label>Estimated Interest Earned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>