force-app/main/default/objects/Funding_Application__c/fields/NameOfPersonCompletingForm__c.field-meta.xml
<CustomField>
    <fullName>NameOfPersonCompletingForm__c</fullName>
    <label>Name of Person Completing Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>