force-app/main/default/objects/Funding_Application__c/fields/PaymentRemitToAddressLine1__c.field-meta.xml
<CustomField>
    <fullName>PaymentRemitToAddressLine1__c</fullName>
    <label>Payment Remit To Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>