force-app/main/default/objects/Funding_Application__c/fields/PaymentRemitToAddressLine2__c.field-meta.xml
<CustomField>
    <fullName>PaymentRemitToAddressLine2__c</fullName>
    <label>Payment Remit To Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>