force-app/main/default/objects/Funding_Application__c/fields/PaymentRemitToCity__c.field-meta.xml
<CustomField>
    <fullName>PaymentRemitToCity__c</fullName>
    <label>Payment Remit To City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>