force-app/main/default/objects/Funding_Application__c/fields/PaymentRemitToZip__c.field-meta.xml
<CustomField>
    <fullName>PaymentRemitToZip__c</fullName>
    <label>Payment Remit To Zip</label>
    <length>5</length>
    <type>Text</type>
</CustomField>