force-app/main/default/objects/Funding_Application__c/fields/PleaseSpecifyOtherEntityType__c.field-meta.xml
<CustomField>
    <fullName>PleaseSpecifyOtherEntityType__c</fullName>
    <label>Please Specify Other Entity Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>