force-app/main/default/objects/Funding_Application__c/fields/ProgramManagerName__c.field-meta.xml
<CustomField>
    <fullName>ProgramManagerName__c</fullName>
    <label>Program Manager Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>