force-app/main/default/objects/Funding_Application__c/fields/ProgramManagerPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>ProgramManagerPhoneNumber__c</fullName>
    <label>Program Manager Phone Number</label>
    <type>Phone</type>
</CustomField>