force-app/main/default/objects/Funding_Application__c/fields/RequestType__c.field-meta.xml
<CustomField>
    <fullName>RequestType__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GPS</fullName>
            </value>
            <value>
                <fullName>DSF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>