force-app/main/default/objects/Funding_Application__c/fields/SCEISVendorNumber__c.field-meta.xml
<CustomField>
    <fullName>SCEISVendorNumber__c</fullName>
    <label>SCEIS Vendor Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>