force-app/main/default/objects/Funding_Application__c/fields/Total_Amount_Requested__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Requested__c</fullName>
    <formula>Total_Project_Budget__c -  MinusEstimatedCarryForwardAmount__c -  MinusEstimatedInterestEarned__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>