force-app/main/default/objects/Funding_Application__c/fields/Total_Project_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_Project_Budget__c</fullName>
    <label>Total Project Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>