force-app/main/default/objects/Funding_Application__c/fields/WasEntityALitigatingSubdivision__c.field-meta.xml
<CustomField>
    <fullName>WasEntityALitigatingSubdivision__c</fullName>
    <label>Was Entity a Litigating Subdivision?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>